// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render AuthorList component GraphQL error 1`] = `
<div>
  <p>
    Error -.-
  </p>
</div>
`;

exports[`Render AuthorList component Loading state 1`] = `
<div>
  <p>
    Loading list of authors ...
  </p>
</div>
`;

exports[`Render AuthorList component Network error 1`] = `
<div>
  <p>
    Error -.-
  </p>
</div>
`;

exports[`Render AuthorList component Success state 1`] = `
<div>
  <div
    class="component"
  >
    <a
      href="/"
    >
      <img
        alt="Return button"
        class="home-button"
        src=""
      />
    </a>
    <div
      class="grid-container"
    >
      <a
        href="/author/details/1"
      >
        <div
          class="grid-container__block"
        >
          <div
            class="grid-container__block_property"
          >
            <p
              class="grid-container__block_property_header"
            >
              Name:
            </p>
            <p
              class="grid-container__block_property_value"
            >
              author1
            </p>
          </div>
          <div
            class="grid-container__block_property"
          >
            <p
              class="grid-container__block_property_header"
            >
              Age:
            </p>
            <p
              class="grid-container__block_property_value"
            >
              55
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
